--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>TwentyOne.TwentyOne</param-value>
+			<param-value>TwentyOne</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
