--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,13 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>${cglib.version}</version>
 			<scope>runtime</scope>
-		</dependency>	
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.5</version>
+		</dependency>
 		<!-- Java JSP -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
@@ -47,7 +53,7 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.4</version>
 			<scope>provided</scope>
-		</dependency>	
+		</dependency>
 		<!-- Spring Context -->
 		<dependency>
 			<groupId>org.springframework</groupId>
